<resources>
    <string name="app_name">Recipes</string>
    <string name="ingredients_sub_header">Ingredients</string>
    <string name="steps_sub_header">Steps</string>
    <string name="etName">Name</string>
    <string name="etIng1">Ingredient 1</string>
    <string name="etIng1Quantity">Quantity</string>
    <string name="etStep1">Step 1</string>
    <string name="btnEdit">Edit</string>
    <string name="btnSave">Save Changes</string>
    <string name="btnChop">Chops</string>
    <string name="btnChoco">Choco</string>
    <string name="btnTBD">TBD</string>
</resources>