<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipesListActivity">
    <Button
        android:id="@+id/btnChop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChoco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChoco"
        app:layout_constraintEnd_toEndOf="@+id/btnTBD"
        app:layout_constraintStart_toStartOf="@+id/btnChop"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTBD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTBD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>